--- a/anchorwaveplots.Rmd
+++ b/anchorwaveplots.Rmd
@@ -7,6 +7,19 @@ Converting raw anchorwave data into dotplots (similar to stephens excel plots) f
 
 ```{r message=FALSE, warning=FALSE, include=FALSE}
 library(tidyverse)
+pubTheme <-theme(title = element_text(size=10), #usually 14
+        text = element_text(size=8),
+        plot.background = element_rect(fill="lightgrey"),
+        strip.background = element_rect(linetype=0,linewidth=8,
+                                        fill="grey"), #facet boxes
+        strip.text = element_text(size=10), #usually 11
+        legend.background = element_rect(fill="grey"),
+        legend.text = element_text(size=8),
+        legend.title = element_text(size=10),
+        panel.background = element_rect(fill="#FFFFFF"), #plot body
+        panel.grid = element_blank() #plot body pt2
+  )
+pubColours <- c("#2d9da6","#99b700","#8a53b6","#bf4824","#152944")
 anchors <- read_table("anchors",comment="#")
 # select only autosomes and sex chromosomes
 anchors_clean<- anchors %>% filter(queryChr == "A1" | 
@@ -21,10 +34,10 @@ ggplot(anchors_clean,aes(referenceStart,queryStart)) + geom_point() + facet_wrap
 ```
 We want the Y to be combined and to make it easier to add PARs and stuff, we will make each plot for each chr separately and use that packaged (zoe mentioned) to combine plots nicely.
 ```{r}
-anchors_clean<- anchors %>% filter(queryChr == "A1" | 
-                                     queryChr== "A2"|
-                                     queryChr== "A4"|
-                                     queryChr=="Y1"|
-                                     queryChr=="Y2")
+max_Y2<-max(filter(anchors_clean, queryChr == "Y2")$queryEnd)
+anchors_mut <- anchors_clean %>% mutate(newstart = ifelse(queryChr == "Y1",(queryStart+max_Y2), queryStart)) %>% mutate(newChr = ifelse(queryChr == "Y1"| queryChr == "Y2","Y", queryChr)) 
+
+ggplot(anchors_mut,aes(referenceStart,newstart)) + geom_point() + facet_wrap(~newChr)
+
 ```
 
