--- a/anchorwaveplots.Rmd
+++ b/anchorwaveplots.Rmd
@@ -7,6 +7,8 @@ Converting raw anchorwave data into dotplots (similar to stephens excel plots) f
 
 ```{r message=FALSE, warning=FALSE, include=FALSE}
 library(tidyverse)
+library(cowplot)
+
 pubTheme <-theme(title = element_text(size=10), #usually 14
         text = element_text(size=8),
         plot.background = element_rect(fill="lightgrey"),
@@ -35,9 +37,20 @@ ggplot(anchors_clean,aes(referenceStart,queryStart)) + geom_point() + facet_wrap
 We want the Y to be combined and to make it easier to add PARs and stuff, we will make each plot for each chr separately and use that packaged (zoe mentioned) to combine plots nicely.
 ```{r}
 max_Y2<-max(filter(anchors_clean, queryChr == "Y2")$queryEnd)
-anchors_mut <- anchors_clean %>% mutate(newstart = ifelse(queryChr == "Y1",(queryStart+max_Y2), queryStart)) %>% mutate(newChr = ifelse(queryChr == "Y1"| queryChr == "Y2","Y", queryChr)) 
+anchors_mut <- anchors_clean %>% mutate(newstart = ifelse(queryChr == "Y1",(queryStart+max_Y2), queryStart)) %>% mutate(newChr = ifelse(queryChr == "Y1"| queryChr == "Y2","Y", queryChr))
 
-ggplot(anchors_mut,aes(referenceStart,newstart)) + geom_point() + facet_wrap(~newChr)
+#ggplot(anchors_mut,aes(referenceStart,newstart)) + geom_point() + facet_wrap(~newChr)
 
 ```
 
+### separate the plots
+
+```{r}
+a1<- anchors_mut %>% filter(newChr=="A1") %>%  ggplot(aes(referenceStart,newstart)) + geom_point() + theme_classic()
+## need to transform A2, A4 and Y for some reason...
+a2<-anchors_mut %>% filter(newChr=="A2") %>% mutate(newstart=(max(queryStart) - queryStart)) %>% ggplot(aes(referenceStart,newstart)) + geom_point() + theme_classic()
+a4<-anchors_mut %>% filter(newChr=="A4") %>% mutate(newstart=(max(queryStart) - queryStart)) %>%ggplot(aes(referenceStart,newstart)) + geom_point() + theme_classic()
+y<-anchors_mut %>% filter(newChr=="Y") %>%  mutate(newstart=(max(queryStart) - queryStart)) %>% ggplot(aes(referenceStart,newstart)) + geom_point(aes(color=queryChr)) + theme_classic() 
+ 
+plot_grid(a1,a2,a4,y)
+```
